# AMR-ISTD

./: .gitignore  LICENSE  README.md  dataloader.py  demo.py  environment.yml  eval.py  pyproject.toml  requirements.txt  train.py
configs/: irdst.yaml  itsdt.yaml
model/: __init__.py  losses.py  network.py  yolox_loss_optimized.py
utils/: __init__.py  eval_utils.py  utils_bbox.py
