[project]
name = "amr-istd"
version = "1.0.0"
description = "AMR: Asymmetric Memory-decoupled Reconstruction for Infrared Small Target Detection"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AMR Authors"}
]
keywords = [
    "infrared-small-target-detection",
    "deep-learning",
    "computer-vision",
    "memory-network",
    "istd",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "PyYAML>=6.0",
    "tqdm>=4.65.0",
    "einops>=0.7.0",
    "matplotlib>=3.7.0",
    "tensorboard>=2.14.0",
    "pycocotools>=2.0.7",
]

[tool.uv]
# Use PyTorch CUDA 12.1 index
extra-index-url = ["https://download.pytorch.org/whl/cu121"]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
